--- a/src/style.css
+++ b/src/style.css
@@ -5,8 +5,12 @@ html {
   font-weight: 400;
 }
 
-h4,
+body {
+  padding: 20px;
+}
+
 h2,
+h4,
 p {
   margin: 0;
 }
@@ -16,53 +20,53 @@ p {
 *:after {
   box-sizing: inherit;
 }
-body {
-  padding: 20px;
-}
+
 #card {
-  width: 1440px;
-  height: 500px;
-  box-shadow: 3px 3px 9px 0px rgba(0, 0, 0, 0.36);
+  box-shadow: 2px 3px 7px 0px rgba(0, 0, 0, 0.35);
   border-radius: 5px;
   overflow: hidden;
 }
 
 #top-section {
   width: 100%;
-  height: 40%;
+  height: 45%;
   padding: 25px;
 }
+
 #bottom-section {
   width: 100%;
-  height: 60%;
+  height: 55%;
   color: white;
 }
 
 #bottom-left-section {
   display: inline-block;
-  width: 50%;
-  height: 100%;
+  width: 100%;
+  height: auto;
   vertical-align: top;
   background-color: #2ab2af;
   padding: 25px;
 }
+
 #bottom-right-section {
   display: inline-block;
-  width: 50%;
-  height: 100%;
+  width: 100%;
+  height: auto;
+  background-color: #2ebfbd;
   vertical-align: top;
   padding: 25px;
-  background-color: #42c9c6;
 }
 
 #top-section h2 {
   color: #2ab2af;
-  margin-bottom: 25px;
+  margin-bottom: 20px;
 }
+
 #top-section h4 {
   color: #c0df34;
   margin-bottom: 10px;
 }
+
 #top-section p {
   color: #98a6bd;
 }
@@ -72,16 +76,16 @@ button {
   background-color: #c0df34;
   border: none;
   padding: 10px;
-  width: 70%;
+  width: 100%;
   border-radius: 5px;
-  align-items: center;
 }
 
 button:hover {
   cursor: pointer;
-  background-color: #7d9121;
+  background-color: #a9c42d;
   transform: scale(1.02);
 }
+
 #price {
   font-weight: 700;
   font-size: 1.4rem;
@@ -96,14 +100,11 @@ button:hover {
   margin-bottom: 40px;
 }
 
-#price,
-#price-frequency {
+#price-frequency,
+#price {
   display: inline-block;
 }
 
-#price-container {
-  margin-bottom: 10px;
-}
 #price-frequency {
   position: relative;
   top: -3px;
@@ -112,9 +113,26 @@ button:hover {
   margin-left: 5px;
 }
 
+#price-container {
+  margin-bottom: 10px;
+}
+
 ul {
-  padding: 0px;
+  padding: 0;
   list-style: none;
   font-size: 0.8rem;
   opacity: 0.8;
+}
+
+@media (min-width: 576px) {
+  #card {
+    width: 600px;
+    height: 400px;
+  }
+
+  #bottom-left-section,
+  #bottom-right-section {
+    width: 50%;
+    height: 100%;
+  }
 }
